--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,4 @@
 <h1>Contact</h1>
 <p>
-	Contact Ruby on Rails Tutorial à propos de l'Application Exemple à
-    <a href="http://railstutorial.org/feedback">feedback page</a>.
+	Contact <a href="mailto:caparenlive59@gmail.com">caparenlive59</a>.
 </p>
