--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,6 @@
 <h1>À Propos de nous</h1>
 <p>
-	<a href="http://railstutorial.org/">Le Tutoriel Ruby on Rails</a>
-      est un projet de livre et de screencasts pour apprendre le développement web
-      avec <a href="http://rubyonrails.org/">Ruby on Rails</a>. Ceci
-      est l'Application Exemple du tutoriel.
+	Version 0.0.1 de MyMoviez.
+	Développement débuté en avril 2015.
+	&copy; <a href="mailto:caparenlive59@gmail.com">caparenlive59</a>
 </p>
