end step 1 : layout and routage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <h1>Bienvenue !</h1>
 <p>
-  Ceci est la page d'accueil de MyMoviez</a>.
+  Ceci est la page d'accueil de MyMoviez.
 </p>
+
+<%= link_to "S'inscrire maintenant !", signup_path, :class => "signup_button round" %>
