--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,7 @@
 <header>
 	<div class="banner">
-		<% logo = image_tag("logo1.png", :alt => "MyMoviez") %>
 		<%= link_to logo, root_path %>
-		<h1><%= link_to "MyMoviez", root_path %></h1>
+		<h1><%= link_to title_base, root_path %></h1>
 		<h2>Vos listes de films, en 1 clic !</h2>
 	</div>
 </header>
