Finished first cut of the User model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <section class="main round shadow">
       	<%= yield %>
       </section>
+      <%= debug(params) if Rails.env.development? %>
       <%= render 'layouts/footer' %>
     </div>
   </body>
