--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <%= csrf_meta_tag %>
-    <%= render 'layouts/stylesheets' %>
-  </head>
-  <body>
-    <div class="container">
-    	<%= render 'layouts/header' %>
-    	<%= render 'layouts/menu' %>
-      <section class="round shadow">
-      	<%= yield %>
-      </section>
-      <%= debug(params) if Rails.env.development? %>
-      <%= render 'layouts/footer' %>
-    </div>
-  </body>
+<head>
+  <title><%= title %></title>
+  <%= csrf_meta_tag %>
+  <%= render 'layouts/stylesheets' %>
+</head>
+<body>
+  <div class="container">
+   <%= render 'layouts/header' %>
+   <%= render 'layouts/menu' %>
+   <section class="round shadow">
+    <% flash.each do |key, value| %>
+    <div class="flash <%= key %>"><%= value %></div>
+    <% end %>
+    <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
+  </section>
+  <%= render 'layouts/footer' %>
+</div>
+</body>
 </html>
