--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,7 @@
 		<ul>
 			<li><%= link_to "À Propos", about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li>
+			<li><%= link_to "Aide", help_path %></li>
 		</ul>
 	</nav>
 	-- &copy; <a href="mailto:caparenlive59@gmail.com">caparenlive59</a> - 2015 - Tout droits réservés -- <%= version %>
