--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -4,11 +4,11 @@
 			<li><%= link_to "Accueil", root_path %></li>
 			<% if signed_in? %>
 			  <li><%= link_to "Mon Profil", current_user %></li>
+			  <li><%= link_to "Utilisateurs", users_path %></li>
 		      <li><%= link_to "Déconnexion", signout_path, :method => :delete %></li>
 		      <% else %>
 		      <li><%= link_to "Se connecter", signin_path %></li>
 		      <% end %>
-			<li><%= link_to "Aide", help_path %></li>
 		</ul>
 	</div>
 </nav>
