--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,1 @@
-<h1><%= @title %></h1>
-
-<%= form_for(@user) do |f| %>
-	<%= render 'shared/error_messages' %>
-	<div class="field">
-		<%= f.label :username, "Nom d'utilisateur" %><br />
-		<%= f.text_field :username %>
-	</div>
-	<div class="field">
-		<%= f.label :email %><br />
-		<%= f.text_field :email %>
-	</div>
-	<div class="field">
-		<%= f.label :password, "Mot de passe" %><br />
-		<%= f.password_field :password %>
-	</div>
-	<div class="field">
-		<%= f.label :password_confirmation, "Confirmation" %><br />
-		<%= f.password_field :password_confirmation %>
-	</div>
-	<div class="actions">
-		<%= f.submit "Inscription" %>
-	</div>
-<% end %>
+<%= render 'layouts/users/form' %>
